# QtHVYM

./: pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-publish.yml
qthvym/: __init__.py
qthvym/data/: style.qss
